# playbyte

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/playbyte_app/: Cargo.toml
crates/playbyte_app/src/: dualsense.rs  input.rs  main.rs
crates/playbyte_app/src/ui/: components.rs  cover_art.rs  mod.rs  thumbnails.rs
crates/playbyte_backend/: Cargo.toml
crates/playbyte_backend/src/: main.rs
crates/playbyte_emulation/: Cargo.toml
crates/playbyte_emulation/src/: lib.rs
crates/playbyte_emulation/tests/: determinism.rs
crates/playbyte_feed/: Cargo.toml
crates/playbyte_feed/src/: lib.rs  romdb.rs
crates/playbyte_libretro/: Cargo.toml
crates/playbyte_libretro/examples/: smoke.rs
crates/playbyte_libretro/src/: lib.rs
crates/playbyte_types/: Cargo.toml
crates/playbyte_types/src/: lib.rs
docs/: backend.md  core_licenses.md  rom_policy.md
xtask/: Cargo.toml
xtask/src/: main.rs
