[package]
name = "playbyte_app"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
wgpu = "0.19"
winit = "0.29"
cpal = "0.15"
gilrs = "0.10"
playbyte_emulation = { path = "../playbyte_emulation" }
playbyte_libretro = { path = "../playbyte_libretro" }
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
playbyte_feed = { path = "../playbyte_feed" }
playbyte_types = { path = "../playbyte_types" }
image = "0.25"
sha1 = "0.10"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1.7", features = ["v4"] }