[package]
name = "playbyte_feed"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
playbyte_types = { path = "../playbyte_types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
thiserror = "1.0"
walkdir = "2.5"
zstd = "0.13"
reqwest = { version = "0.11", features = ["json"] }